--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -307,31 +307,31 @@
                     <input type="hidden" name="custom_values" class="js-item-custom-price" data-index="{{forloop.index}}" data-units="{{item.quantity}}" value="{{item.properties._custom_price}}">
                   {%- elsif item.original_price != item.final_price -%}
                     <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
-                    <del>{{ item.original_price | money }}</del>
+                    <del class="js-item-price-{{forloop.index}}">{{ item.original_price | money }}</del>
                     <span class="visually-hidden">{{ 'products.product.sale_price' | t }}</span>
                     <span class="Bold-theme-hook-DO-NOT-DELETE bold_cart_item_price" data-item-key="{{item.key}}" style="display:none !important;"></span>
                     {%- if item.properties._bold_bundles_price -%}
                       {%- assign has_custom_pricing = true -%}
-                      <span>{{ item.original_price | money }}</span><br>
+                      <span class="js-item-price-{{forloop.index}}">{{ item.original_price | money }}</span><br>
                     {%- endif -%}
-                    <{% if item.properties._bold_bundles_price %}del{% else %}span{% endif %} class="order-discount">{{ item.final_price | money }}</{% if item.properties._bold_bundles_price %}del{% else %}span{% endif %}>
+                    <{% if item.properties._bold_bundles_price %}del{% else %}span{% endif %} class="order-discount js-item-price-{{forloop.index}}">{{ item.final_price | money }}</{% if item.properties._bold_bundles_price %}del{% else %}span{% endif %}>
                   {%- elsif item.variant.compare_at_price and item.variant.compare_at_price != item.final_price -%}
                     <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
-                    <del>{{ item.variant.compare_at_price | money }}</del>
+                    <del class="js-item-price-{{forloop.index}}">{{ item.variant.compare_at_price | money }}</del>
                     <span class="visually-hidden">{{ 'products.product.sale_price' | t }}</span>
                     <span class="Bold-theme-hook-DO-NOT-DELETE bold_cart_item_price" data-item-key="{{item.key}}" style="display:none !important;"></span>
                     {%- if item.properties._bold_bundles_price -%}
                       {%- assign has_custom_pricing = true -%}
-                      <span>{{ item.original_price | money }}</span><br>
+                      <span class="js-item-price-{{forloop.index}}">{{ item.original_price | money }}</span><br>
                     {%- endif -%}
-                    <{% if item.properties._bold_bundles_price %}del{% else %}span{% endif %} class="order-discount">{{ item.final_price | money }}</{% if item.properties._bold_bundles_price %}del{% else %}span{% endif %}>
+                    <{% if item.properties._bold_bundles_price %}del{% else %}span{% endif %} class="order-discount js-item-price-{{forloop.index}}">{{ item.final_price | money }}</{% if item.properties._bold_bundles_price %}del{% else %}span{% endif %}>
                   {%- else -%}
                     {%- assign tag_name = 'span' -%}
                     {%- if item.properties._bold_bundles_price -%}
                       {%- assign has_custom_pricing = true -%}
                       {%- assign tag_name = 'del' -%}
                       <span class="Bold-theme-hook-DO-NOT-DELETE bold_cart_item_price" data-item-key="{{item.key}}" style="display:none !important;"></span>
-                      <span>{{ item.original_price | money }}</span><br>
+                      <span class="js-item-price-{{forloop.index}}">{{ item.original_price | money }}</span><br>
                     {%- elsif item.product.tags contains 'BYB_DISCOUNT' -%}
                       {%- assign has_discount = false -%}
                       {%- if item.variant.compare_at_price and item.variant.compare_at_price != item.final_price -%}
@@ -343,12 +343,12 @@
                             {%- assign discount_value = settings.byb_discount | times: item.quantity -%}
                             {%- assign discounted_price = item.original_price | minus: settings.byb_discount -%}
                             {%- assign tag_name = 'del' -%}
-                            <span>{{ discounted_price | money }}</span><br>
+                            <span class="js-item-price-{{forloop.index}}">{{ discounted_price | money }}</span><br>
                           {%- endunless -%}
                         {%- endif -%}
                       {%- endunless -%}
                     {%- endif -%}
-                    <{{tag_name}}>{{ item.final_price | money }}</{{tag_name}}>
+                    <{{tag_name}} class="js-item-price-{{forloop.index}}">{{ item.final_price | money }}</{{tag_name}}>
                   {%- endif -%}
 
                   {% include 'product-unit-price', variant: item, available: item.variant.available %}
@@ -367,12 +367,12 @@
                   <label class="visually-hidden" for="updates_{{ item.key }}">{{ 'cart.label.quantity' | t }}</label>
                   <input class="quantity-selector form__input js-cart-quantity-selector js-cart-quantity-selector-{{forloop.index}}" type="number" name="updates[]"
                     id="updates_{{ item.key }}" value="{{ item.quantity }}"
+                    data-input-index="{{ forloop.index }}"
                     {% if item.properties._custom_increment %}step="{{item.properties._custom_increment}}"{% endif %}
-                    readonly
                     min="{% if item.properties._custom_increment %}{{item.properties._custom_increment}}{% else %}0{% endif %}">
                   <p class="cart__error-message cart__error-message--invalid-quantity js-invalid-quantity js-invalid-quantity-{{forloop.index}} hide">Please enter a valid quantity</p>
                 </td>
-                <td data-label="{{ 'cart.label.total' | t }}" class="text-right cart__table-cell--line-price">
+                <td id="js-line-price{{ forloop.index }}" data-item-price="{{ item.final_price | money_without_currency}}" data-label="{{ 'cart.label.total' | t }}" class="text-right cart__table-cell--line-price js-line-price">
                   {%- if item.properties._custom_price != blank -%}
                     {%- assign item_value = item.properties._custom_price | times: 100 | times: item.quantity -%}
                     {%- assign subtotal = subtotal | plus: item_value -%}
