--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -28,7 +28,7 @@
   <meta itemprop="image" content="{{ product.featured_image.src | img_url: 'grande' }}">
 
   {% comment %}
-    Get first variant in stock, or deep linked one
+    Get first variant in stock, or deep linked one.
   {% endcomment %}
   {% assign current_variant = product.selected_or_first_available_variant %}
   {%- assign featured_image = current_variant.featured_image | default: product.featured_image -%}
