Add Soil3 recommendation section layout

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -194,6 +194,7 @@
   {% section 'product-pallet-banner' %}
   {%- endif -%}
 
+  {% section 'byb-rec-section' %}
   {% section "ss-footer" %}
 
   {%- if request.page_type == 'index' -%}
