--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -346,5 +346,7 @@
   {% if settings.ss_enable %}
   	{% render 'ss-intellisuggest' %}
   {% endif %}
+  
+  <script src="{{ 'recommended_soil3.js' | asset_url }}" defer></script>
 </body>
 </html>
